# data-society-ibm-ml-project

./: Makefile  README.md  pyproject.toml
data_society_ibm_ml_project/: __init__.py  dataset.py  features.py  plots.py
data_society_ibm_ml_project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/preprocessing-model/: project_project_school_name_description_ML_algorithm.ipynb
models/preprocessing-model/clustering-project-description/: project_description_clustering.ipynb
models/preprocessing-model/project-school-type-naive-bayes/: project_project_school_name_description_ML_algorithm.ipynb
notebooks/: Data_wrangling.ipynb
notebooks/data-cleaning/: data_removed_missing_values_null_na_illogical_date
notebooks/data-cleaning/removing-all-missing-values/: data-cleaning-removing-all-missing-values.ipynb
notebooks/data-munging/: data_removed_missing_values_null_na_illogical_date_added_time_cost_diff_and_ratio  transformation_time_cost_ratio_intervals.ipynb
notebooks/data-munging/time-cost-transformation/: transformation_time_cost_ratio_intervals.ipynb
notebooks/data-profiling/: Untitled.ipynb  data_profiling_dates.ipynb  data_profiling_geographic.ipynb  data_profiling_spending.ipynb  data_profiling_whole_data_set.ipynb
notebooks/regression-imputation/: data_regression_inputing.ipynb
reports/: raw_data_wrangling.md
