[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_society_ibm_ml_project"
version = "0.0.1"
description = "Data society IBM machine learing project "
authors = [
  { name = "data-soc-ibm-team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["data_society_ibm_ml_project"]
force_sort_within_sections = true
